// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DaysOfTheWeekController should render disabled component 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-fixed px-0 css-1ss2ei0-MuiContainer-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 mb-2 css-10i9if-MuiTypography-root"
    >
      Week Day
    </h6>
    <div
      class="css-iglq0z"
    >
      <div
        aria-label="Days of the week"
        class="MuiToggleButtonGroup-root css-f8i28h-MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="sunday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="sunday"
        >
          form.daysOfTheWeekValues.SUNDAY
        </button>
        <button
          aria-label="monday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="monday"
        >
          form.daysOfTheWeekValues.MONDAY
        </button>
        <button
          aria-label="tuesday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="tuesday"
        >
          form.daysOfTheWeekValues.TUESDAY
        </button>
        <button
          aria-label="wednesday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="wednesday"
        >
          form.daysOfTheWeekValues.WEDNESDAY
        </button>
        <button
          aria-label="thursday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="thursday"
        >
          form.daysOfTheWeekValues.THURSDAY
        </button>
        <button
          aria-label="friday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="friday"
        >
          form.daysOfTheWeekValues.FRIDAY
        </button>
        <button
          aria-label="saturday"
          aria-pressed="false"
          class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          disabled=""
          tabindex="-1"
          type="button"
          value="saturday"
        >
          form.daysOfTheWeekValues.SATURDAY
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DaysOfTheWeekController should render monday first if locale is starting with monday 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-fixed px-0 css-1ss2ei0-MuiContainer-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 mb-2 css-1ptzdzb-MuiTypography-root"
    >
      Week Day
    </h6>
    <div
      class="css-iglq0z"
    >
      <div
        aria-label="Days of the week"
        class="MuiToggleButtonGroup-root css-f8i28h-MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="monday"
          aria-pressed="true"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="monday"
        >
          form.daysOfTheWeekValues.MONDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="tuesday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="tuesday"
        >
          form.daysOfTheWeekValues.TUESDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="wednesday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="wednesday"
        >
          form.daysOfTheWeekValues.WEDNESDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="thursday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="thursday"
        >
          form.daysOfTheWeekValues.THURSDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="friday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="friday"
        >
          form.daysOfTheWeekValues.FRIDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="saturday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="saturday"
        >
          form.daysOfTheWeekValues.SATURDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="sunday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="sunday"
        >
          form.daysOfTheWeekValues.SUNDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DaysOfTheWeekController should render the component 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-fixed px-0 css-1ss2ei0-MuiContainer-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 mb-2 css-1ptzdzb-MuiTypography-root"
    >
      Week Day
    </h6>
    <div
      class="css-iglq0z"
    >
      <div
        aria-label="Days of the week"
        class="MuiToggleButtonGroup-root css-f8i28h-MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="sunday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="sunday"
        >
          form.daysOfTheWeekValues.SUNDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="monday"
          aria-pressed="true"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="monday"
        >
          form.daysOfTheWeekValues.MONDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="tuesday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="tuesday"
        >
          form.daysOfTheWeekValues.TUESDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="wednesday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="wednesday"
        >
          form.daysOfTheWeekValues.WEDNESDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="thursday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="thursday"
        >
          form.daysOfTheWeekValues.THURSDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="friday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="friday"
        >
          form.daysOfTheWeekValues.FRIDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="saturday"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1rijrxi-MuiButtonBase-root-MuiToggleButton-root"
          tabindex="0"
          type="button"
          value="saturday"
        >
          form.daysOfTheWeekValues.SATURDAY
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
